updates for readability

--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -24,13 +24,12 @@
     <div class="work-description">
       <p>
         In September 2017, I formed a group with three other graduate students to
-        find a problem and design a user-centered solution. As we met and began
-        to discuss the task, we found we were all motivated to choose a problem
-        that was socially-responsible, current, under-investigated, and relevant
+        find a problem and design a user-centered solution. We were all motivated
+        to work on a project that was socially-responsible, topical, and relevant
         to our local region.
       </p>
       <p>
-        We selected a project that could impact thousands of Seattle's citizens:
+        We decided to work on an issue that impacts thousands of Seattle's citizens:
         design a user-centered solution to help homeless Seattle residents store
         their possessions securely and sustainably.
       </p>
@@ -45,39 +44,36 @@
 
     <p>
       At the outset of the project, our opportunity space was broad: we wanted
-      to look at solutions that would in some way address homelessness in
-      Seattle. So our first task was to narrow our scope. To do so, we began a
-      brief literature review.
+      to look at problems for homelessness residents of Seattle. In order to find
+      the right issue to examine, we began a literature review and reached
+      out to experts for interviews. Some of our findings at this time included:
     </p>
 
-    <p>
-      Seattle's effort to address homelessness is significant &mdash; so much so that
-      in late 2017, it was a primary topic of the ongoing mayoral race between
-      Jenny Durkan and Cary Moon. Fortunately for us, this meant that it was
-      also heavily spotlighted by local media. Our literature review focused on
-      the long-form investigative pieces across Seattle's shelters and tent
-      cities. In the course of my review, <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">
-      I put together many notes like this one</a>, aggregating and highlighting
-      key opportunities that we could further investigate.
-    </p>
-
-    <p>
-      During our lit review, we also began outreach to experts in the field. I
-      wrote to <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">
-      Barbara Poppe</a>, an appointee by President Obama to the U.S. Interagency
-      Council on Homelessness. I began a discussion with her about our group's
-      issue area and intent that helped inform our focus. She helped to
-      validate and confirm our trajectory early on in the project. We also
-      contacted University of Washington professors in the school of public
-      health to hold informal interviews about our progress.
-    </p>
+    <ul class="work-body-list">
+      <li>
+        We each combed dozens of in-depth investigative reports. We created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">
+        many notes like this one</a>, aggregating and highlighting opportunities
+        that we could further investigate.
+      </li>
+      <li>
+        We found many experts willing to speak with us. I began a conversation with <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">
+        Barbara Poppe</a>, an appointee by President Obama to the U.S. Interagency
+        Council on Homelessness. She helped validate and confirm our trajectory
+        early on in the project.
+      </li>
+      <li>
+        With such an open ended challenge ahead, our lit review and secondary-source
+        interviews helped us understand how a narrow scope could help us achieve
+        tangible results.
+      </li>
+    </ul>
 
     <p>
       As our group reviewed our findings and interviews, we decided to focus on
       designing sustainable storage solutions for Seattle's homeless populations.
       We chose this opportunity space because it was small enough in scope for us
       to explore, but large enough that it could provide benefits and peace of
-      mind to users:
+      mind to many users:
     </p>
 
     <ul class="work-body-list">
@@ -90,6 +86,17 @@
     <h2 class="work-body-h2">
       Understanding the Domain
     </h2>
+
+    <p>
+      With a narrower focus in mind, our research continued &mdash; we would need
+      to understand this complex system better in order to know our constraints
+      and opportunities. We first sought to understand what audiences were involved,
+      and what stakeholder objectives would define a viable solution.
+    </p>
+
+    <h3 class="work-body-h3">
+      Types of Homeless Housing Projects
+    </h3>
 
     <p>
       Seattle presents many distinct populations of homeless residents who are
@@ -115,12 +122,14 @@
       viable solution.
     </p>
 
+    <h3 class="work-body-h3">
+      Financial Resources Available
+    </h3>
+
     <p>
       Beyond existing housing programs, we also wanted to understand the
       financial resources that the city puts towards homelessness. We
-      investigated how budgetary resources are organized in Seattle. The
-      resources here, like in many cities, are scarce. But understanding the
-      financial context was critical to designing a realistic solution.
+      investigated how budgetary resources are organized in Seattle.
     </p>
 
     <figure class="work-body-figure">
@@ -134,6 +143,15 @@
         The homelessness spending budget in Seattle
       </figcaption>
     </figure>
+
+    <p>
+      The resources here, like in many cities, are scarce. But understanding the
+      financial context was critical to designing a realistic solution.
+    </p>
+
+    <h3 class="work-body-h3">
+      A Philosophy of Housing First
+    </h3>
 
     <p>
       Through literature review and secondary-source interviews, we came to align
@@ -317,9 +335,13 @@
       </li>
     </ul>
 
+    <h3 class="work-body-h3">
+      Early Design Ideas from the Field
+    </h3>
+
     <p>
       One of my design ideas came from this field visit &mdash; from seeing the
-      kind of structural supports depicted in the last picture above. Many of
+      kind of structural supports depicted in the last three picture above. Many of
       the structures in the Nickelsville Ballard camp were fabricated from
       a mix of skeletal supports (the kind of plastic, PVC type material shown),
       and a simple waterproof exoskeleton, like a standard tarp. I knew I wanted
@@ -438,26 +460,9 @@
     </figure>
 
     <p>
-      I wrote the following sections of the document:
+      This is a detailed report with many different elements. If you'd like to know
+      more, please reach out. I'd be happy to walk you through it. Thanks for reading.
     </p>
-
-    <ul class="work-body-list">
-      <li>
-        The organization of the system, from the information architecture, to
-        the concepts around the basic data structures that might be involved
-        (pp. 6-9)
-      </li>
-      <li>
-        The "Interface and Interaction" section, and how the system could be used
-        (p. 9)
-      </li>
-      <li>
-        The wireframes, annotated with design rationales (pp. 10-17)
-      </li>
-      <li>
-        The brainstorm in the appendix, (pp. 19-20)
-      </li>
-    </ul>
 
   </div>
 
