--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -225,7 +225,7 @@
           class="work-body-image border"
           alt="Helping Participants in VR">
         <figcaption class="work-body-image-caption">
-          Helping Participants into VR
+          Helping participants into VR
         </figcaption>
       </figure>
       <figure class="work-body-figure">
