updates to ifrc study

--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -47,10 +47,17 @@
     </h2>
 
     <p>
-      At the outset of this project, our first step &mdash; and one that was foundational
-      to any measurement of our success &mdash; was to recalibrate our understanding of our
-      domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">
-      humanitarian principles</a>.
+      At the outset of this project, our first step was to recalibrate our
+      understanding of our domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">
+      humanitarian principles</a> and with <a class="work-body-link" target="_blank" href="http://www.un.org/en/universal-declaration-human-rights/">
+      Universal Human Rights</a>.
+    </p>
+
+    <p>
+      If you want to understand some of this task of recalibration, please take
+      a look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">
+      an excellent, quick summary of contextual shifts involved</a>. Designing
+      with a humanitarian's outlook is not as intuitive as it sounds!
     </p>
 
     <figure class="work-body-figure">
@@ -84,10 +91,9 @@
     </ul>
 
     <p>
-      This period of literary review and introductory interviews with our IFRC
-      colleagues was critical for us to build the understanding we needed to
-      in order to understand, first, the language of our clients at the IFRC, and
-      in turn, the millions of individuals they support through the VCA system.
+      This period of research aided us in understanding, first, the domain of our
+      clients at the IFRC, and in turn, how they support millions of individuals
+      through the VCA system.
     </p>
 
     <p>
@@ -100,18 +106,41 @@
         system, it is the community that determines the plan and owns the results.
       </li>
       <li>
+        In this domain, there are absolutely no quid pro quos. All of our actions
+        are in the service of the community. Furthermore, we cannot define what
+        serves the community &mdash; only they can do that.
+      </li>
+      <li>
         Communicating scope is the best way to mitigate the constant push and pull
         of changing variables in a large, complex system. Stakeholders, requirements,
         participants, and directives may constantly change, but by maintaining a
         shared sense of scope, the project can still succeed.
       </li>
       <li>
-        Systems don't succeed or fail; rather, they shift around the active stakeholders'
-        competing objectives. As researchers, our task is to understand the system
-        and those influencing it. Once we have an understanding of the system, we
-        can begin to design for it.
+        Systems don't succeed or fail; rather, they shift around the active
+        stakeholders' competing objectives. As researchers, our first task is to
+        understand the system and those influencing it.
       </li>
     </ul>
+
+    <p>
+      It's impossible to communicate the complexity of this system in a single case
+      study, but I hope the resources above can provide some important context.
+      This research period helped me to understand how to approach a complex system
+      and build understanding from many different perspectives at once.
+    </p>
+
+    <h2 class="work-body-h2">
+      Finding Opportunities
+    </h2>
+
+    <p>
+      Our task in this class was not to design an intervention, but to plan one
+      that would unfold over the ensuing year. Subsequent research groups would
+      use our findings and our plan to progress from research into design. So having
+      developed a nuanced understanding of the domain, our job was to outline
+      research avenues that ensuing teams could explore.
+    </p>
 
   </div>
 
