stubbing out remaining ifrc work

--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -135,12 +135,38 @@
     </h2>
 
     <p>
-      Our task in this class was not to design an intervention, but to plan one
-      that would unfold over the ensuing year. Subsequent research groups would
-      use our findings and our plan to progress from research into design. So having
-      developed a nuanced understanding of the domain, our job was to outline
-      research avenues that ensuing teams could explore.
+      Our task in this class was not to design an intervention, but to develop a
+      plan for one which would unfold over the ensuing year. Subsequent research
+      groups would use our findings and our plan to progress from research into
+      design. So having developed a nuanced understanding of the domain, our job
+      was to outline research avenues that ensuing teams could explore.
     </p>
+
+    <p>---remaining outline...</p>
+
+    <ul class="work-body-list">
+      <li>
+        Formed a group with a prinicipal foundation: VCAs work well. The challenge
+        is how to scale them, and increase their impact and reach in larger, more
+        complex regions: cities.
+      </li>
+      <li>
+        We interviewed with IFRC representatives, conducted lit reviews, and studied
+        past case studies for common threads. We built on the findings of past
+        experts to create an actionable research plan for incorporating new
+        technology into how VCA should scale.
+      </li>
+      <li>
+        We wrote a research plan through iterative, collaborative engagement with
+        IFRC - validating our approach and building interest in the long-run project.
+      </li>
+      <li>
+        We presented our final work the IFRC, and to UW DRG students who would
+        continue our work.
+      </li>
+    </ul>
+
+
 
   </div>
 
