update ifrc study

--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -17,7 +17,7 @@
       <li class="work-tag">UX Research</li>
       <li class="work-tag">Research Planning</li>
       <li class="work-tag">Literature Review</li>
-      <li class="work-tag">Secondary Source Interviews</li>
+      <li class="work-tag">Semi-Structured Interviews</li>
     </ul>
 
     <div class="work-description">
@@ -135,38 +135,144 @@
     </h2>
 
     <p>
-      Our task in this class was not to design an intervention, but to develop a
-      plan for one which would unfold over the ensuing year. Subsequent research
-      groups would use our findings and our plan to progress from research into
-      design. So having developed a nuanced understanding of the domain, our job
-      was to outline research avenues that ensuing teams could explore.
+      Our task was not to "design" an intervention, but to develop a research plan
+      plan which would be followed over the ensuing year. Subsequent research groups
+      would use our plan to both continue our research and progress into design.
     </p>
 
-    <p>---remaining outline...</p>
+    <p>
+      So having developed a nuanced understanding of the domain, our job
+      was to outline research avenues that ensuing teams could explore. To do so,
+      we each formed teams of four to explore contrasting opportunities.
+    </p>
+
+    <h3 class="work-body-h3">
+      Move Slow and Break Nothing
+    </h3>
+
+    <p>
+      Working with a complex humanitarian system, we had to be mindful that the
+      system, as it stands, works well. We all had a keen sense to "first do no harm."
+      In many ways, it would be easier to hinder progress through careless changes
+      than to improve the tried and true VCA model. This notion became the foundation
+      for my team's approach.
+    </p>
+
+    <p>
+      Knowing that the existing VCA model works, how can we build on it, or expand it,
+      with a digital toolset? We decided to take on the issue of scaling VCA
+      processes with human-centered applications of new technology.
+    </p>
+
+    <h2 class="work-body-h2">
+      The VCA Model in Urban Settings
+    </h2>
+
+    <p>
+      Our research indicated VCAs were a proven and effective model, and that the
+      participatory nature of the model was part and parcel to its success. However,
+      not everything worked well: the success stories overwhelmingly took place
+      in small, rural settings. The IFRC was grappling with how to apply this
+      participatory model in cities.
+    </p>
+
+    <p>
+      A typical VCA involves 20-30 community members collaboratively building
+      a shared understanding and problem solving, using many traditional
+      human-centered design methods. Some examples include:
+    </p>
 
     <ul class="work-body-list">
       <li>
-        Formed a group with a prinicipal foundation: VCAs work well. The challenge
-        is how to scale them, and increase their impact and reach in larger, more
-        complex regions: cities.
+        Collaborative mapping of the community, including group transect-walks to
+        explore community hazards
       </li>
       <li>
-        We interviewed with IFRC representatives, conducted lit reviews, and studied
-        past case studies for common threads. We built on the findings of past
-        experts to create an actionable research plan for incorporating new
-        technology into how VCA should scale.
+        Institutional and social-network analysis; community stakeholder analysis
       </li>
       <li>
-        We wrote a research plan through iterative, collaborative engagement with
-        IFRC - validating our approach and building interest in the long-run project.
-      </li>
-      <li>
-        We presented our final work the IFRC, and to UW DRG students who would
-        continue our work.
+        Review of secondary-sources and semi-structured interviews to inform each
+        of the above
       </li>
     </ul>
 
+    <p>
+      VCA facilitators were experienced applying these practices on pen & paper,
+      in small groups. This methodology ensured the egalitarian nature of the process:
+      everyone in the room could voice their concerns and be heard. But it was
+      inherently limiting to the number of participants. This became our challenge:
+    </p>
 
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/uw-rcrc-complex-systems-and-vca/problem-solving.png"
+        class="work-body-image border"
+        alt="Link to the Art and Science of VCA">
+      <figcaption class="work-body-image-caption">
+        VCAs have traditionally relied on analog, participatory methods
+      </figcaption>
+    </figure>
+
+    <p>
+      How can we use technology to enhance the human-centered processes of the VCA
+      without hindering the participatory, equitable nature of the model?
+    </p>
+
+    <h2 class="work-body-h2">
+      Crafting a Research Plan
+    </h2>
+
+    <p>
+      To answer our questions, we interwiewed our IFRC colleagues in semi-structured
+      interviews, and conducted a deep, secondary-source analysis of case studies
+      of prior VCAs. We also sent a representative to an IFRC VCA conference in
+      Kuala Lumpur to ask prepared questions of VCA facilitators.
+    </p>
+
+    <p>In brief, some of our key findings and recommendations included:</p>
+
+    <ul class="work-body-list">
+      <li>
+        To scale geographical mapping and problem solving, while maintaining the
+        participatory method, pilot the inclusion of GIS tools in collaborative
+        mapping approaches.
+      </li>
+      <li>
+        Pilot social-network analysis and secondary-source research to scale the
+        stakeholder mapping, and reach a wider, more complex network.
+      </li>
+      <li>
+        VCA facilitators have limited time for collaborative testing. Before
+        involving them, model the pilots through methods like roleplaying,
+        scenarios and user-journey maps, and bodystorming.
+      </li>
+    </ul>
+
+    <p>You can see our full report below:</p>
+
+    <figure class="work-body-figure">
+      <a target="_blank" href="https://www.dropbox.com/s/bz4f7rfn38zvqed/HCDE%20520%20-%20Team%204.pdf?dl=0">
+        <img
+          src="../assets/images/work/uw-rcrc-complex-systems-and-vca/final-written-plan.png"
+          class="work-body-image border"
+          alt="Link to our written plan">
+      </a>
+      <figcaption class="work-body-image-caption">
+        Our team's final report
+      </figcaption>
+    </figure>
+
+    <p>
+      To conclude our work, we presented our report to the IFRC, and subsequently
+      to students who would continue our work in Directed Research Groups. We
+      were all deeply grateful to the IFRC for their time and collaboration: working
+      with them was an incredible opportunity, and gave us amazing insights into
+      a humanitarian, complex system at work.
+    </p>
+
+    <p>
+      If you have any questions about the report, please reach out! Thanks for reading.
+    </p>
 
   </div>
 
