--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -62,7 +62,7 @@
         early on in the project.
       </li>
       <li>
-        With such an open ended challenge ahead, our lit review and secondary-source
+        With such an open ended challenge ahead, our lit review and semi-structured
         interviews helped us understand how a narrow scope could help us achieve
         tangible results.
       </li>
@@ -154,7 +154,7 @@
     </h3>
 
     <p>
-      Through literature review and secondary-source interviews, we came to align
+      Through literature review and semi-structured interviews, we came to align
       ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">
       housing first</a> &mdash; the idea that the overwhelming majority of city funds
       should be put towards the creation of permanent housing solutions rather
