--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -136,12 +136,12 @@
 
     <p>
       Our task was not to "design" an intervention, but to develop a research plan
-      plan which would be followed over the ensuing year. Subsequent research groups
+      which would be followed over the ensuing year. Subsequent research groups
       would use our plan to both continue our research and progress into design.
     </p>
 
     <p>
-      So having developed a nuanced understanding of the domain, our job
+      Having developed a nuanced understanding of the domain, our job
       was to outline research avenues that ensuing teams could explore. To do so,
       we each formed teams of four to explore contrasting opportunities.
     </p>
@@ -223,7 +223,7 @@
     </h2>
 
     <p>
-      To answer our questions, we interwiewed our IFRC colleagues in semi-structured
+      To answer our questions, we interviewed our IFRC colleagues in semi-structured
       interviews, and conducted a deep, secondary-source analysis of case studies
       of prior VCAs. We also sent a representative to an IFRC VCA conference in
       Kuala Lumpur to ask prepared questions of VCA facilitators.
