add yarn basics

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -9,7 +9,7 @@
 
       <div class="work-subtitle">
         Conducting a usability test to evaluate first-time user experiences
-        with Oculus Touch and motion-controlled software.
+        with Oculus Touch and motion-controlled software
       </div>
     </div>
 
