--- a/src/assets/work-templates/uw-research-with-yarn.html
+++ b/src/assets/work-templates/uw-research-with-yarn.html
@@ -23,23 +23,45 @@
 
     <div class="work-description">
       <p>
-        Check Back Soon
+        Over the course of six months from 2017-2018, I worked with a Directed
+        Research Group in HCDE to help run a long-term evaluation of Yarn, a
+        research iOS app for writing  stories of accomplishment through personal
+        data like running data, photos, videos, and text.
       </p>
 
       <p>
-        Check Back Soon
+        Yarn uses a structured writing experience to help people create content
+        which aligns with their goals for sharing that others would find
+        interesting. Yarn was specifically designed to support two types of
+        stories of personal accomplisment: training for a running race or
+        working on Do-It-Yourself projects.
       </p>
+
+      <p>
+        I helped to recruit, screen, and manage a cohort of 15 participants who
+        used the app for 5 weeks each. Throughout the study, we conducted weekly
+        surveys as well as pre- and post-study semi-structured interviews. At
+        the end of the study, I helped to analyze and synthesize the data. Our
+        findings are under submission to CHI Proceedings.
     </div>
 
   </div>
   <div class="work-body">
 
     <h2 class="work-body-h2">
-      More Coming Soon
+      Research Planning
     </h2>
 
     <p>
-      More Coming Soon
+      At the outset of our project, the design of the Yarn application was complete,
+      but the research study of its use was just beginning. I joined a team with
+      three other students to help run the study and analyze our findings.
+    </p>
+
+    <p>picture</p>
+
+    <p>
+      ...
     </p>
 
   </div>
