--- a/src/assets/work-templates/uw-research-with-yarn.html
+++ b/src/assets/work-templates/uw-research-with-yarn.html
@@ -8,8 +8,8 @@
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Researching how narrative can enhance data-driven stories of accomplishment
-        and increase social feedback
+        Researching how narrative can enhance data-driven stories of
+        accomplishment to improve social feedback
       </div>
     </div>
 
@@ -24,8 +24,8 @@
     <div class="work-description">
       <p>
         Over the course of six months from 2017-2018, I worked with a Directed
-        Research Group in HCDE to help run a long-term evaluation of Yarn, a
-        research iOS app for writing  stories of accomplishment through personal
+        Research Group in HCDE to help run a long-term evaluation of Yarn &mdash;
+        a research iOS app for writing stories of accomplishment through personal
         data like running data, photos, videos, and text.
       </p>
 
@@ -38,30 +38,170 @@
       </p>
 
       <p>
-        I helped to recruit, screen, and manage a cohort of 15 participants who
-        used the app for 5 weeks each. Throughout the study, we conducted weekly
+        I helped to recruit, interview, and manage a cohort of 15 participants who
+        used the app for four weeks each. Throughout the study, we conducted weekly
         surveys as well as pre- and post-study semi-structured interviews. At
         the end of the study, I helped to analyze and synthesize the data. Our
-        findings are under submission to CHI Proceedings.
+        findings are under submission to CHI Proceedings in 2018.
+      </p>
     </div>
 
   </div>
   <div class="work-body">
 
     <h2 class="work-body-h2">
+      Understanding the Research and the App
+    </h2>
+
+    <p>
+      At the outset of our project, the design of the Yarn application was
+      complete, but we had to organize and run its usability study. I joined
+      a team with three other students to help run the study and analyze our
+      findings.
+    </p>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/uw-research-with-yarn/recruitment-photo.png"
+        class="work-body-image border"
+        alt="Sharing on DIY and running progress on Yarn">
+      <figcaption class="work-body-image-caption">
+        Sharing DIY and running progress on Yarn
+      </figcaption>
+    </figure>
+
+    <p>
+      We first spent some time familiarizing ourselves with the application. To
+      contrast Yarn with an app like Runkeeper, Yarn focuses on building an
+      extended narrative from many chapters, rather than on "individual" runs.
+      Each run (e.g. 'Wednesday 5k') is added to an overall story (e.g. 'Training
+      for the Boston Marathon'). The same would be true of a DIY project like
+      building a chair.
+    </p>
+
+    <p>
+      Through the text, images, and video that make up each chapter, Yarn
+      presents a more holistic view of the overall project. This is foundational
+      to the guiding question we were addressing: does this holistic approach to
+      sharing improve the feedback that our participants get from their
+      communities?
+    </p>
+
+    <p>
+      After using the application for a week, and discussing the research with
+      Daniel Epstein, the PhD candidate running the study, we began recruiting.
+    </p>
+
+    <h2 class="work-body-h2">
       Research Planning
     </h2>
 
     <p>
-      At the outset of our project, the design of the Yarn application was complete,
-      but the research study of its use was just beginning. I joined a team with
-      three other students to help run the study and analyze our findings.
+      The research around Yarn was more involved than in many stand-alone
+      usability tests. We were recruiting a cohort to use the application for over
+      a month, and interviewing not just our cohort of participants, but also their
+      social contacts to understand their network's perspectives.
     </p>
 
-    <p>picture</p>
+    <p>
+      Creating our research plan, we went through a number of important steps:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        Crafting a flexible timeline to allow for drop-out participants,
+        recruitment, four weeks of application use and check-ins, as well
+        as final interviews and analysis
+      </li>
+      <li>
+        Creating screening surveys to address general requirements, as well as
+        specific criteria around DIY or running
+      </li>
+      <li>
+        Preparing a comprehensive on-boarding for participants, including
+        technical explanations and providing research background
+      </li>
+      <li>
+        Recruiting across Seattle DIY and running communities
+      </li>
+      <li>
+        Skype interviews with participants to on-board and explain our process
+      </li>
+    </ul>
+
+    <h2 class="work-body-h2">
+      Running the Study, Surveying, and Interviewing
+    </h2>
 
     <p>
-      ...
+      After two weeks of recruitment, we reached our goal of organizing 15
+      participants who would use the application, and share progress with their
+      friends or family.
+    </p>
+
+    <p>
+      Over the course of the next 5 weeks, we met as a team and worked to
+      accomplish some key tasks:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        Discussing emerging findings based on our participants' patterns of use
+      </li>
+      <li>
+        Crafting weekly surveys to explore participants' perceptions
+      </li>
+      <li>
+        Discussing key interview criteria and progressively building a final
+        interview script based on our participants' feedback.
+      </li>
+      <li>
+        Reaching out to participants who dropped-off, and replacing
+        them if and when they decided to leave the study
+      </li>
+      <li>
+        Conducting final interviews with our participants. Each team member
+        interviewed about 5 participants for an hour to explore their feedback
+      </li>
+    </ul>
+
+    <p>
+      One of our primary efforts during this time was discussing and honing our
+      interviews approach to direct participant discussions towards our research
+      questions, and away from issues related to bugs or visual designs in the app.
+      These issues proved to be distracting for some participants, and we mitigated
+      this by:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        Creating a space for participants to voice their feedback related
+        to bugs or visual issues; listening intently and honestly to their concerns
+      </li>
+      <li>
+        Candidly explaining that the application would not go to market, and that
+        we were interested in understanding their feelings about sharing and feedback
+      </li>
+      <li>
+        Connecting their experience on Yarn to commercial tools; if a feature showed
+        errors on Yarn, how would they have responded to it instead on a more commercial
+        app like Runkeeper?
+      </li>
+    </ul>
+
+    <p>
+      The interviews proved to be rich with feedback towards our research questions,
+      and we next began to analyze the interviews towards summarizing our findings.
+    </p>
+
+    <h2 class="work-body-h2">
+      Analyzing our Findings
+    </h2>
+
+    <p>
+      During the period from March - June 2018, we'll be analyzing our findings.
+      Check back soon for more information as we continue to update the
+      publication under review.
     </p>
 
   </div>
