--- a/src/assets/work-templates/uw-research-with-yarn.html
+++ b/src/assets/work-templates/uw-research-with-yarn.html
@@ -33,7 +33,7 @@
         Yarn uses a structured writing experience to help people create content
         which aligns with their goals for sharing that others would find
         interesting. Yarn was specifically designed to support two types of
-        stories of personal accomplisment: training for a running race or
+        stories of personal accomplishment: training for a running race or
         working on Do-It-Yourself projects.
       </p>
 
@@ -135,7 +135,7 @@
 
     <p>
       After two weeks of recruitment, we reached our goal of organizing 15
-      participants who would use the application, and share progress with their
+      participants who would use the application and share progress with their
       friends or family.
     </p>
 
@@ -165,12 +165,16 @@
       </li>
     </ul>
 
+    <h3 class="work-body-h3">
+      Focusing our Interviews around our Research Questions
+    </h3>
+
     <p>
       One of our primary efforts during this time was discussing and honing our
-      interviews approach to direct participant discussions towards our research
+      interview approach to direct participant discussions towards our research
       questions, and away from issues related to bugs or visual designs in the app.
       These issues proved to be distracting for some participants, and we mitigated
-      this by:
+      them by:
     </p>
 
     <ul class="work-body-list">
