--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -293,14 +293,14 @@
       together affinity diagrams, and draft out our presentation and report.
     </p>
 
-
     <h2 class="work-body-h2">
       Presenting and Reporting Out
     </h2>
 
     <p>
       To get a full look at our findings, you can review <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">
-      our presentation</a> and <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">our final report</a>.
+      our presentation</a> and <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">
+      our final report</a>.
     </p>
 
     <figure class="work-body-figure">
