--- a/src/assets/work-templates/vox-global-brand-redesign.html
+++ b/src/assets/work-templates/vox-global-brand-redesign.html
@@ -70,9 +70,9 @@
 
     <p>
       I had read <a class="work-body-link" target="_blank" href="https://www.contentstrategy.com/content-strategy-for-the-web">
-      Kristina Halvorson's Content Strategy for the Web</a> in 2011, and
+      Kristina Halvorson's Content Strategy for the Web</a> in 2011 and
       leaned on this book as we started the project. We began by thoroughly
-      auditing our own web content and information architecture, and conducting a
+      auditing our own web content and information architecture. We also conducted a
       competitive analysis of other D.C. firms.
     </p>
 
@@ -105,7 +105,7 @@
       including our company's CEO, COO, and many of the managing partners. This
       group included many brilliant strategists and writers with many conflicting
       opinions. We met regularly to brainstorm and collaborate around the foundational
-      content that informed our decision-making process, and learned many lessons
+      content that informed our decision-making process. We learned many lessons
       along the way.
     </p>
 
@@ -154,7 +154,7 @@
       <li>
         Avoid jargon. Move away from <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_buzzwords">
         corporate buzzwords</a> towards <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_plain_English_words_and_phrases">
-        plain english</a>. Side note: I've always loved that Wikipedia aggregates these!
+        plain English</a>. Side note: I've always loved that Wikipedia aggregates these!
       </li>
       <li>
         Show, don't tell. We wanted to minimize the extent to which we wrote about
