update cs studies

--- a/src/assets/work-templates/crowdskout-data-viz.html
+++ b/src/assets/work-templates/crowdskout-data-viz.html
@@ -2,25 +2,30 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Complex Data Viz
+        Simplifying Data Visualization
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Crowdskout crowdskout crowdskout
+        Developing an intuitive system for data visualization in Crowdskout
       </div>
     </div>
 
     <ul class="work-tags">
       <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">Javascript</li>
+      <li class="work-tag">JavaScript</li>
       <li class="work-tag">AngularJS</li>
+      <li class="work-tag">D3.js</li>
     </ul>
 
     <div class="work-description">
       <p>
-        Crowdskout crowdskout
+        I joined Crowdskout in 2015 with a directive to overhaul Crowdskout's
+        data visualization system. Working with a team of engineers, I researched
+        and built the foundations of the system. The system was designed
+        so that a novice user could quickly learn and operate it to design and
+        deliver complex visualizations without any training.
       </p>
     </div>
 
@@ -28,34 +33,88 @@
   <div class="work-body">
 
     <h2 class="work-body-h2">
-      Crowdskout stuff
+      Building a System with D3 and AmCharts
     </h2>
 
     <p>
-      Text
+      We built the system using a mix of <a class="work-body-link" target="_blank" href="https://d3js.org/">
+      D3</a> and a library called <a class="work-body-link" target="_blank" href="https://www.amcharts.com/">
+      amCharts</a>, also built on D3. The visualization component integrated with
+      the Crowdskout app as an Angular component, coded with a mix of vanilla JavaScript
+      and AngularJS.
+    </p>
+
+    <p>
+      Using a multi-step editor, a user could select an audience segment,
+      criteria, and a graph type, and create a graph that could be customized or
+      exported in a variety of ways.
     </p>
 
     <figure class="work-body-figure">
       <img
-        src="../assets/images/work/uw-yarn/recruitment-photo.png"
+        src="../assets/images/work/crowdskout-data-viz/viz-1a.png"
         class="work-body-image border"
-        alt="Sharing on DIY and running progress on Yarn">
+        alt="Customizing a chart, step 1">
       <figcaption class="work-body-image-caption">
-        Sharing DIY and running progress on Yarn
+        A user may select a custom segment of their data to include in the graph
       </figcaption>
     </figure>
 
-    <ul class="work-body-list">
-      <li>
-        a
-      </li>
-      <li>
-        b
-      </li>
-      <li>
-        c
-      </li>
-    </ul>
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-data-viz/viz-2a.png"
+        class="work-body-image border"
+        alt="Customizing a chart, step 2">
+      <figcaption class="work-body-image-caption">
+        They may select from a range of hundreds of different criteria to graph
+      </figcaption>
+    </figure>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-data-viz/viz-3a.png"
+        class="work-body-image border"
+        alt="Customizing a chart, step 3">
+      <figcaption class="work-body-image-caption">
+        Depending on their prior selections, they may graph comparison, composition, or time-series graphs
+      </figcaption>
+    </figure>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-data-viz/viz-4a.png"
+        class="work-body-image border"
+        alt="Customizing a chart, step 4">
+      <figcaption class="work-body-image-caption">
+        Users can control what style of graph they select, and toggle between options to compare
+      </figcaption>
+    </figure>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-data-viz/viz-5a.png"
+        class="work-body-image border"
+        alt="Customizing a chart, step 5">
+      <figcaption class="work-body-image-caption">
+        Alternatively, they may select a table to customize
+      </figcaption>
+    </figure>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-data-viz/viz-6a.png"
+        class="work-body-image border"
+        alt="Customizing a chart, step 6">
+      <figcaption class="work-body-image-caption">
+        The graph may be exported, or displayed elsewhere in Crowdskout for easy monitoring
+      </figcaption>
+    </figure>
+
+    <p>
+      Crowdskout's data visualization component is a complex, interactive module
+      of the application. If you have any questions, I'm happy to walk through the
+      design and code involved. Thanks for reading.
+    </p>
 
   </div>
 
