--- a/src/assets/work-templates/crowdskout-form-editor.html
+++ b/src/assets/work-templates/crowdskout-form-editor.html
@@ -14,7 +14,7 @@
 
     <ul class="work-tags">
       <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">Javascript</li>
+      <li class="work-tag">JavaScript</li>
       <li class="work-tag">AngularJS</li>
     </ul>
 
