--- a/src/assets/work-templates/crowdskout-segmenting.html
+++ b/src/assets/work-templates/crowdskout-segmenting.html
@@ -2,25 +2,28 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Segmenting Audiences for Crowdskout
+        Segmenting Audiences Effectively
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Crowdskout crowdskout crowdskout
+        Overhauling the interface for audience segmentation in Crowdskout
       </div>
     </div>
 
     <ul class="work-tags">
       <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">Javascript</li>
+      <li class="work-tag">JavaScript</li>
       <li class="work-tag">AngularJS</li>
     </ul>
 
     <div class="work-description">
       <p>
-        Crowdskout crowdskout
+        Audience segmentation is at the heart of Crowdskout's data analytics
+        system. In 2016, after the segmentation tool grew in complexity, we
+        overhauled the interface to this critical tool to better support the
+        new capabilities it offered.
       </p>
     </div>
 
