--- a/src/assets/work-templates/crowdskout-datetime.html
+++ b/src/assets/work-templates/crowdskout-datetime.html
@@ -2,25 +2,30 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Time!
+        Revamping Date & Time Selections
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Crowdskout crowdskout crowdskout
+        Developing a modular way to manipulate date & datetime selections in
+        Crowdskout
       </div>
     </div>
 
     <ul class="work-tags">
       <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">Javascript</li>
+      <li class="work-tag">JavaScript</li>
       <li class="work-tag">AngularJS</li>
+      <li class="work-tag">Moment.js</li>
     </ul>
 
     <div class="work-description">
       <p>
-        Crowdskout crowdskout
+        As we grew the Crowdskout app to support more complex time-series graphs
+        and other date & time dependent inputs, we encountered a need to overhaul
+        our date & time UI and data treatment. I led the effort to overhaul our
+        date & time management.
       </p>
     </div>
 
@@ -28,34 +33,43 @@
   <div class="work-body">
 
     <h2 class="work-body-h2">
-      Crowdskout stuff
+      Engineering with Moment.js
     </h2>
 
     <p>
-      Text
+      Using the <a class="work-body-link" target="_blank" href="https://momentjs.com/">
+      Moment.js</a> library as a backbone for transforming and handling our
+      date & datetime data, I built a custom component for accepting input data,
+      transforming, and saving data in ISO8601 format. The component was built
+      to be a flexible AngularJS directive that could easily shift implementations
+      between date alone, or datetime, depending on varying needs.
     </p>
 
     <figure class="work-body-figure">
       <img
-        src="../assets/images/work/uw-yarn/recruitment-photo.png"
+        src="../assets/images/work/crowdskout-datetime/datetime-1a.png"
         class="work-body-image border"
-        alt="Sharing on DIY and running progress on Yarn">
+        alt="Selecting a date with the datepicker">
       <figcaption class="work-body-image-caption">
-        Sharing DIY and running progress on Yarn
+        The implementation for date alone
       </figcaption>
     </figure>
 
-    <ul class="work-body-list">
-      <li>
-        a
-      </li>
-      <li>
-        b
-      </li>
-      <li>
-        c
-      </li>
-    </ul>
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-datetime/datetime-2a.png"
+        class="work-body-image border"
+        alt="Selecting a date and time with the datepicker">
+      <figcaption class="work-body-image-caption">
+        The implementation for datetime inputs
+      </figcaption>
+    </figure>
+
+    <p>
+      Crowdskout's date & time component is a complex, interactive module
+      within the application. If you have any questions, I'm happy to walk through
+      the design and code involved. Thanks for reading.
+    </p>
 
   </div>
 
