additional cs studies

--- a/src/assets/work-templates/crowdskout-form-editor.html
+++ b/src/assets/work-templates/crowdskout-form-editor.html
@@ -2,13 +2,14 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Crowdskout forms
+        A System for Interactive Forms
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Crowdskout crowdskout crowdskout
+        Enabling users to create, manage, and interpret data from surveys & forms
+        using a variety of designs and conditions
       </div>
     </div>
 
@@ -20,7 +21,10 @@
 
     <div class="work-description">
       <p>
-        Crowdskout crowdskout
+        One way that Crowdskout users can interact with their profiles is to
+        deliver rich surveys and forms for a variety of circumstances. I overhauled
+        the form system in 2015 and 2016, and added a system for conditionally
+        branching questions to facilitate rich survey creation.
       </p>
     </div>
 
@@ -28,34 +32,40 @@
   <div class="work-body">
 
     <h2 class="work-body-h2">
-      Crowdskout stuff
+      Profile Fields Tied to Custom Questions
     </h2>
 
     <p>
-      Text
+      A Crowdskout user may use forms to ask any number of questions. These questions
+      in turn can fuel the creating or updating of any of the hundreds of Crowdskout
+      profile fields that exist in their database.
     </p>
 
     <figure class="work-body-figure">
       <img
-        src="../assets/images/work/uw-yarn/recruitment-photo.png"
+        src="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
         class="work-body-image border"
-        alt="Sharing on DIY and running progress on Yarn">
+        alt="Example fields 1">
       <figcaption class="work-body-image-caption">
-        Sharing DIY and running progress on Yarn
+        A look at the field selection and questions on a Crowdskout form
       </figcaption>
     </figure>
 
-    <ul class="work-body-list">
-      <li>
-        a
-      </li>
-      <li>
-        b
-      </li>
-      <li>
-        c
-      </li>
-    </ul>
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/crowdskout-form-editor/form-editor-2a.png"
+        class="work-body-image border"
+        alt="Example fields 1">
+      <figcaption class="work-body-image-caption">
+        Additional Crowdskout form fields
+      </figcaption>
+    </figure>
+
+    <p>
+      Crowdskout's form editor component is a complex, interactive module
+      within the application. If you have any questions, I'm happy to walk through
+      the design and code involved. Thanks for reading.
+    </p>
 
   </div>
 
